Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-102196

QDockWidget: wrong mouse cursor icon used when dock widget floating, has custom title bar & contains window container

    XMLWordPrintable

Details

    • Windows
    • 975c0bdf7 (dev), c224c98b8 (6.6), 1d07ea918 (6.5), a8a71f2cd (tqtc/lts-6.2), 89fc58127 (dev), 805322881 (6.7), e8b2047a9 (6.6)

    Description

      If a window container is placed within QDockWidget (floating, with custom title bar, using a QQuickView embedded via QWidget::createWindowContainer()) mouse cursor icon might end up incorrect when hovering the client are of the dock widget. When the mouse cursor is moved slowly from outside the dock widget window inside the window, the cursor will change at the border to indicate that it's possible to resize the window as expected. However, the cursor will not return to normal as long as the cursor remains within the window,

      This does not occur if the dock widget uses the default title bar.

      Steps to reproduce the problem:

      • Run the attached app
      • Move mouse cursor slowly from the outside of the dock widget window towards the center of the window

       

      Attachments

        1. qtbug102196.zip
          1 kB
        2. qtbug102196_2.zip
          3 kB
        3. qtbug102196_log.txt
          3 kB
        4. qtbug102196_515_diag.diff
          7 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            axelspoerl Axel Spoerl
            miikapernu Miika Pernu
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: